--- a/index.html
+++ b/index.html
@@ -40,9 +40,12 @@
   <body>
     <div class="d-flex flex-column flex-start-center">
       <header class="main-header d-flex flex-between-center">
-        <div class="header-logo d-flex flex-center-center">
+        <a
+          class="header-logo d-flex flex-center-center"
+          href="https://lexis-iota.vercel.app/"
+        >
           <img src="./imgs/header-logo.png" alt="Логотип Lexis Academy" />
-        </div>
+        </a>
         <nav class="header-nav d-flex flex-between-center">
           <ul>
             <li><a href="#programs">Программы</a></li>
@@ -292,10 +295,10 @@
             ></i>
           </div>
         </div>
-        <div class="teachers-cards">
-          <div class="swiper swiper-teachers">
-            <div class="swiper-wrapper">
-              <div class="swiper-slide">
+        <div class="swiper swiper-teachers">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <div class="teacher-card">
                 <img src="./imgs/teacher-1.png" alt="Учитель 1" />
                 <p class="teacher-name">Имя Фамилия</p>
                 <p class="teacher-info">
@@ -303,7 +306,9 @@
                 </p>
                 <button class="teacher-button">Сертификаты</button>
               </div>
-              <div class="swiper-slide">
+            </div>
+            <div class="swiper-slide">
+              <div class="teacher-card">
                 <img src="./imgs/teacher-2.png" alt="Учитель 2" />
                 <p class="teacher-name">Имя Фамилия</p>
                 <p class="teacher-info">
@@ -311,7 +316,9 @@
                 </p>
                 <button class="teacher-button">Сертификаты</button>
               </div>
-              <div class="swiper-slide">
+            </div>
+            <div class="swiper-slide">
+              <div class="teacher-card">
                 <img src="./imgs/teacher-3.png" alt="Учитель 3" />
                 <p class="teacher-name">Имя Фамилия</p>
                 <p class="teacher-info">
@@ -319,7 +326,9 @@
                 </p>
                 <button class="teacher-button">Сертификаты</button>
               </div>
-              <div class="swiper-slide">
+            </div>
+            <div class="swiper-slide">
+              <div class="teacher-card">
                 <img src="./imgs/teacher-4.png" alt="Учитель 4" />
                 <p class="teacher-name">Имя Фамилия</p>
                 <p class="teacher-info">
@@ -327,7 +336,9 @@
                 </p>
                 <button class="teacher-button">Сертификаты</button>
               </div>
-              <div class="swiper-slide">
+            </div>
+            <div class="swiper-slide">
+              <div class="teacher-card">
                 <img src="./imgs/teacher-3.png" alt="Учитель 5" />
                 <p class="teacher-name">Имя Фамилия</p>
                 <p class="teacher-info">
@@ -335,7 +346,9 @@
                 </p>
                 <button class="teacher-button">Сертификаты</button>
               </div>
-              <div class="swiper-slide">
+            </div>
+            <div class="swiper-slide">
+              <div class="teacher-card">
                 <img src="./imgs/teacher-4.png" alt="Учитель 6" />
                 <p class="teacher-name">Имя Фамилия</p>
                 <p class="teacher-info">
@@ -569,9 +582,12 @@
       </section>
       <footer class="site-footer">
         <div class="footer-white d-flex flex-between-center">
-          <div class="header-logo d-flex flex-center-center">
+          <a
+            class="header-logo d-flex flex-center-center"
+            href="https://lexis-iota.vercel.app/"
+          >
             <img src="./imgs/header-logo.png" alt="Логотип Lexis Academy" />
-          </div>
+          </a>
           <nav class="header-nav d-flex flex-between-center">
             <ul>
               <li><a href="#programs">Программы</a></li>
@@ -595,6 +611,7 @@
           <p>Пользовательское соглашение</p>
         </div>
       </footer>
+      <div class="hover-overlay"></div>
     </div>
   </body>
 
